Changes in version 1.5 (... 2008)

 - Camera scene node rotation and target can now be bound together so that changing one automatically changes the other (as the FPS camera has always done). See ICameraSceneNode::bindTargetAndRotation()

 - Removed VS6 .dsw / .dsp project files - VS6 is no longer supported.

 - ISceneNode::setParent and addChild now updates node SceneManager pointers if the node was from another SceneManager.

 - Basic support for joystick input events on Windows, Linux, SDL and OSX.  Tested with wired Logitech and Thrustmaster wired controllers and XBox 360 wireless controller ( http://tattiebogle.net/index.php/ProjectRoot/Xbox360Controller/OsxDriver )

 - Major API change: RTTs are now created via addRenderTargetTexture instead of createRenderTargetTexture, which allows to retrieve them from the texture cache, but also changes the way of removing the RTTs, and especially one must not drop the pointer anymore.

 - WindowsCE-Bugfix

 - isBetweenPoints return true now even for the begin and end points, i.e. line segments are now including their start and end.

 - Fix XML reader creation for non-existing files and invalid callbacks.

 - Avoid loading textures which are not used by the mesh in b3d loader.

 - Added scaleTCoords methods to MeshManipulator

 - Enable use of other meshes for shadow mesh generation, can be used to speed up shadow generation and rendering for complex meshes. Patch based on a version by tonic.

 - Fixed usage of SIrrCreationParameters struct, which dind't have copy constructor and assignment operator anymore, since the Irrlicht version string was made const.

 - New glext.h (version 41) and glxext.h (version 20) supporting OpenGL 3.0

 - Added support for read-only locking of textures. Can speed up those calls.

 - Added support for locking RTTs under OpenGL.

 - Implementation of UserData events from system events.

 - ICameraSceneNode::setIsOrthogonal replaced by a parameter to setProjectionMatrix.
